[package]
name = "RaydiumSync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
anyhow = "1.0"
futures-util = "0.3.31"