[package]
name = "RaydiumSync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
anyhow = "1.0"
bytes = "1.9.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
serde_json = "1.0.134"